testsuite/tests/properties/invalid_dynvar/use_unbound/test.lkt
from common import BaseNode, FooNode, my_var

class Example: BaseNode implements TokenNode {
    fun get_int_impl(): Int = my_var
}
